# circuit-notation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.ghc-9.10.project  cabal.project  circuit-notation.cabal  default.nix  flake.nix  shell.nix
.github/workflows/: ci.yml
example/: Example.hs  Testing.hs  ValueCircuits.hs
nix/: ghcid.nix  nixpkgs.json  nixpkgs.nix  update-nixpkgs.sh
src/: Circuit.hs  CircuitNotation.hs
src/GHC/Types/Unique/: Map.hs
src/GHC/Types/Unique/Map/: Extra.hs
talk/: slides.md
tests/: error-location.hs  unittests.hs
tests/fixtures/: BusError.hs  CrossDelayError.hs  CrossDomainError.hs  MixedMarkerError.hs  ValueExprError.hs  ValueLetError.hs  ValuePortError.hs  ValueShapeError.hs
