-- cabal-version: 2.2
name:                circuit-notation
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     CircuitNotation
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.12
    , ghc >=8.6
    , syb
    , HUnit
    , parsec
    , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
