cabal-version:       2.4
name:                circuit-notation
version:             0.1.0.0
synopsis:            A source plugin for manipulating circuits in clash with a arrow notation
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
copyright:           2024 Christopher Chalmers
category:            Hardware
build-type:          Simple
tested-with:
    GHC ==9.6.7
  , GHC ==9.8.4
  , GHC ==9.10.3
  , GHC ==9.12.4

library
  exposed-modules:     CircuitNotation Circuit

  if impl(ghc < 9.8)
    other-modules:
      GHC.Types.Unique.Map.Extra

  -- other-extensions:
  build-depends:
      base >=4.12 && <5
    , clash-prelude >= 1.0
    , containers
    , data-default
    , ghc >= 9.6 && < 9.13
    , lens
    , mtl
    , parsec
    , pretty
    , pretty-show
    , syb
    , template-haskell
    , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite library-testsuite
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          unittests.hs
  other-modules:    Example
  hs-source-dirs:   tests, example
  build-depends:    base, circuit-notation, clash-prelude >= 1.0
