cabal-version: 2.4
name: circuit-notation
version: 0.2.0.0
synopsis: Source plugin for manipulating circuits in Clash using arrow notation
description:
  Source plugin for manipulating circuits in Clash using arrow notation.
  See the GitHub README for usage and examples:
  <https://github.com/cchalmers/circuit-notation/blob/main/README.md>

homepage: https://github.com/cchalmers/circuit-notation
bug-reports: https://github.com/cchalmers/circuit-notation/issues
license: BSD-3-Clause
license-file: LICENSE
author: Christopher Chalmers
maintainer: c.chalmers@me.com
copyright: 2024 Christopher Chalmers
category: Hardware
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.3
  ghc ==9.12.4

source-repository head
  type: git
  location: https://github.com/cchalmers/circuit-notation.git

library
  exposed-modules:
    Circuit
    CircuitNotation

  if impl(ghc <9.8)
    other-modules:
      GHC.Types.Unique.Map.Extra
  -- other-extensions:
  build-depends:
    base >=4.12 && <5,
    clash-prelude >=1.0,
    containers,
    data-default,
    ghc >=9.6 && <9.13,
    lens,
    mtl,
    parsec,
    pretty,
    pretty-show,
    syb,
    template-haskell,
    unordered-containers,

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite library-testsuite
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: unittests.hs
  other-modules: Example
  hs-source-dirs:
    tests
    example

  build-depends:
    base,
    circuit-notation,
    clash-prelude >=1.0,
